--- a/client/pom.xml
+++ b/client/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>log4j-core</artifactId>
             <version>2.4.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>16</version>
+        </dependency>
     </dependencies>
 
 
